--- a/SonicPiledriver/Voip/nbproject/project.properties
+++ b/SonicPiledriver/Voip/nbproject/project.properties
@@ -29,9 +29,11 @@ dist.jar=${dist.dir}/Voip.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.sqlite-jdbc-3.8.7.jar=C:\\Users\\Jeff\\Downloads\\sqlite-jdbc-3.8.7.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.sqlite-jdbc-3.8.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -59,7 +61,7 @@ main.class=SonicPiledriver.SonicPiledriver.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_8
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
