--- a/Java/nbproject/project.properties
+++ b/Java/nbproject/project.properties
@@ -59,7 +59,7 @@ main.class=SonicPiledriver.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_8
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
