--- a/Java/nbproject/project.properties
+++ b/Java/nbproject/project.properties
@@ -60,6 +60,7 @@ main.class=SonicPiledriver.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
+no.dependencies=true
 platform.active=JDK_8
 run.classpath=\
     ${javac.classpath}:\
